--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gristmill"
-version = "0.8.0.dev0"
+version = "0.9.0"
 description = "A package for automatic optimization and code generation of tensor computations"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 dependencies = [
-  "drudge",
+  "drudge @ git+https://github.com/DrudgeCAS/drudge.git@pep621",
   "jinja2",
   "sympy>=1.7",
   "numpy",
@@ -29,8 +29,12 @@ authors = [
   { name = "Gustavo E. Scuseria" }
 ]
 
+[project.optional-dependencies]
+docs = ["sphinx"]
+dev = ["pytest"]
+
 [project.urls]
-Homepage = "https://github.com/chenpeizhi/gristmill"
+Homepage = "https://github.com/DrudgeCAS/gristmill"
 
 [tool.setuptools]
 include-package-data = true
