--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "deps/cpypp"]
 	path = deps/cpypp
-	url = https://github.com/tschijnmo/cpypp.git
+	url = https://github.com/DrudgeCAS/cpypp.git
 [submodule "deps/libparenth"]
 	path = deps/libparenth
-	url = https://github.com/tschijnmo/libparenth.git
+	url = https://github.com/DrudgeCAS/libparenth.git
 [submodule "deps/fbitset"]
 	path = deps/fbitset
-	url = https://github.com/tschijnmo/fbitset.git
+	url = https://github.com/DrudgeCAS/fbitset.git
