--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,7 @@ maintainers = [
 
 [project.optional-dependencies]
 docs = ["sphinx"]
-dev = ["pytest"]
-julia = ["juliacall>=0.9.20"]
+dev = ["pytest", "juliacall>=0.9.20"]
 
 [project.urls]
 Homepage = "https://github.com/DrudgeCAS/gristmill"
